syntax = "proto3";

package main;

option go_package = "./proto";

// 添加优选专区
message AddPreferredAreaReq {
  int64 id = 1; //主键ID
  string name = 2; //专区名称
  string sub_title = 3; //子标题
  string pic = 4; //展示图片
  int32 sort = 5; //排序
  int32 show_status = 6; //显示状态：0->不显示；1->显示
  string create_by = 7; //创建者
}

message AddPreferredAreaResp {
  string pong = 1;
}

// 删除优选专区
message DeletePreferredAreaReq {
  repeated int64 ids = 1;
}

message DeletePreferredAreaResp {
  string pong = 1;
}

// 更新优选专区
message UpdatePreferredAreaReq {
  int64 id = 1; //主键ID
  string name = 2; //专区名称
  string sub_title = 3; //子标题
  string pic = 4; //展示图片
  int32 sort = 5; //排序
  int32 show_status = 6; //显示状态：0->不显示；1->显示
  string update_by = 9; //更新者
}

message UpdatePreferredAreaResp {
  string pong = 1;
}

// 更新优选专区状态
message UpdatePreferredAreaStatusReq {
  repeated int64 ids = 1; //主键ID
  int32 show_status = 6; //显示状态：0->不显示；1->显示
  string update_by = 9; //更新者
}

message UpdatePreferredAreaStatusResp {
  string pong = 1;
}

// 查询优选专区详情
message QueryPreferredAreaDetailReq {
    int64 id = 1;
}

message QueryPreferredAreaDetailResp {
  int64 id = 1; //主键ID
  string name = 2; //专区名称
  string sub_title = 3; //子标题
  string pic = 4; //展示图片
  int32 sort = 5; //排序
  int32 show_status = 6; //显示状态：0->不显示；1->显示
  string create_by = 7; //创建者
  string create_time = 8; //创建时间
  string update_by = 9; //更新者
  string update_time = 10; //更新时间

}

// 分页查询优选专区列表
message QueryPreferredAreaListReq {
  string name = 1; //专区名称
  string sub_title = 2; //子标题
  string pic = 3; //展示图片
  int32 show_status = 4; //显示状态：0->不显示；1->显示
  int32 page_num = 5; //第几页
  int32 page_size = 6; //每页的数量
}

message PreferredAreaListData {
  int64 id = 1; //主键ID
  string name = 2; //专区名称
  string sub_title = 3; //子标题
  string pic = 4; //展示图片
  int32 sort = 5; //排序
  int32 show_status = 6; //显示状态：0->不显示；1->显示
  string create_by = 7; //创建者
  string create_time = 8; //创建时间
  string update_by = 9; //更新者
  string update_time = 10; //更新时间

}

message QueryPreferredAreaListResp {
  int64 total = 1;
  repeated  PreferredAreaListData list = 2;
}

// 优选专区
service PreferredAreaService {
  // 添加优选专区
  rpc AddPreferredArea(AddPreferredAreaReq) returns (AddPreferredAreaResp){}
  // 删除优选专区
  rpc DeletePreferredArea(DeletePreferredAreaReq) returns (DeletePreferredAreaResp){}
  // 更新优选专区
  rpc UpdatePreferredArea(UpdatePreferredAreaReq) returns (UpdatePreferredAreaResp ){}
  // 更新优选专区状态
  rpc UpdatePreferredAreaStatus(UpdatePreferredAreaStatusReq) returns (UpdatePreferredAreaStatusResp ){}
  // 查询优选专区详情
   rpc QueryPreferredAreaDetail(QueryPreferredAreaDetailReq) returns (QueryPreferredAreaDetailResp){}
  // 查询优选专区列表
  rpc QueryPreferredAreaList(QueryPreferredAreaListReq) returns (QueryPreferredAreaListResp){}


}
